<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/menu_translate"
            android:icon="@mipmap/left_translation"
            android:checkable="true"
            android:title="@string/menu_translate"/>
        <item
            android:id="@+id/menu_read"
            android:icon="@mipmap/left_reading"
            android:checkable="true"
            android:title="@string/menu_read"/>
        <item
            android:id="@+id/menu_daily"
            android:icon="@mipmap/left_daily_sentance"
            android:checkable="true"
            android:title="@string/menu_daily"/>
        <item
            android:id="@+id/menu_voa"
            android:icon="@mipmap/left_voa"
            android:checkable="true"
            android:title="@string/menu_voa"/>

    </group>

    <group>
        <item
            android:id="@+id/menu_glossary"
            android:icon="@mipmap/left_wordsbook"
            android:checkable="true"
            android:title="@string/menu_glossary"/>
        <item
            android:id="@+id/menu_offline"
            android:icon="@mipmap/left_offdic"
            android:checkable="true"
            android:title="@string/menu_offline"/>
        <item
            android:id="@+id/menu_setting"
            android:icon="@mipmap/left_setting"
            android:checkable="true"
            android:title="@string/menu_setting"/>

    </group>

</menu>